--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     android:theme="@style/Theme.Seccion9_Fragments"
     tools:targetApi="31">
     <activity
-      android:name=".MainActivity"
+      android:name=".Activities.MainActivity"
       android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
