--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
     android:theme="@style/Theme.Seccion9_Fragments"
     tools:targetApi="31">
     <activity
+      android:name=".DetailsActivity"
+      android:exported="false" />
+    <activity
       android:name=".Activities.MainActivity"
       android:exported="true">
       <intent-filter>
